Fix: format spacing of rows, columns and content

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 
-/*
+/* Colors
   "rgba(57, 94, 102, 1)",
   "rgba(56, 125, 122, 1)",
   "rgba(50, 147, 111, 1)",
@@ -13,13 +13,14 @@
   "rgba(15, 155, 90, 1)"
 */
 
-#body {
+body {
   font-family: "Roboto", sans-serif;
-  background-color: rgba(218, 247, 220, 1);
+  background-color: rgba(218, 247, 220, 1) !important;
 }
 
 h1 {
   font-size: 4em;
+  margin-top: 2em;
 }
 
 h2 {
@@ -31,18 +32,14 @@ h2 {
   padding-bottom: 10px;
 }
 
-h3 {
-  font-style: italic;
-  font-size: 2em;
-  color: rgba(57, 94, 102, 1);
-  line-height: 22px;
+h2 a:link {
+  display: block !important;
 }
 
-h4 {
-  font-weight: bold;
-  font-size: 1em;
-  color: rgba(57, 94, 102, 1);
-  line-height: 17px;
+h3 {
+  font-size: 2em;
+  color: rgba(57, 94, 102, 1) !important;
+  line-height: 22px;
 }
 
 p {
@@ -51,37 +48,28 @@ p {
   line-height: 1.2em;
 }
 
-a {
-  color: rgba(57, 94, 102, 1);
-  text-decoration: none;
-  display: block;
+a:link {
+  color: rgba(57, 94, 102, 1) !important;
+  text-decoration: none !important;
 }
 
-.date-text {
-  font-style: italic;
-  font-size: 14px;
-  color: #999;
-  line-height: 16px;
+a:visited {
+  color: rgba(57, 94, 102, 1) !important;
+  text-decoration: none !important;
 }
 
-.location-text {
-  font-style: italic;
-  font-size: 14px;
-  color: #999;
-  line-height: 16px;
+a:hover {
+  color: rgba(15, 155, 90, 1) !important;
+  text-decoration: none !important;
+}
+
+a:active {
+  color: rgba(15, 155, 90, 1) !important;
+  text-decoration: none !important;
 }
 
 ul {
   list-style-type: none;
-}
-
-span {
-  /*padding: 5px;*/
-}
-
-.entry-icon {
-  color: rgba(57, 94, 102, 1);
-  background-color: rgba(218, 247, 220, 1);
 }
 
 
@@ -100,10 +88,17 @@ span {
 .navItem {
   display: block;
   text-align: center;
-  color: white;
   padding-top: 1em;
   padding-bottom: 1em;
   width: 100%;
+}
+
+.navItem:link, .navItem:visited {
+  color: white !important;
+}
+
+.navItem:hover, .navItem:active {
+  color: rgba(218, 247, 220, 1) !important;
 }
 
 .bg-user {
@@ -120,8 +115,6 @@ span {
 
 .bg-envelope {
   background-color: rgba(38, 169, 108, 1);
-  /*background-color: rgba(218, 247, 220, 1);
-  color: rgba(38, 169, 108, 1);*/
 }
 
 .entry-icon {
@@ -131,65 +124,71 @@ span {
 
 /* Header Styles */
 
-
-/*#header {
-  background-color: #484848;
-}*/
-
 #name {
   font-size: 40px;
   color: rgba(57, 94, 102, 1);
   line-height: 48px;
   display: block;
-  /*margin-top: 48px;*/
 }
 
 .welcome-message {
   font-style: italic;
   font-size: 18px;
   color: rgba(57, 94, 102, 1);
-  line-height: 28px;
+  line-height: 1.2em;
 }
 
 .biopic {
-  padding-top: 2em;
-  /*float: left;*/
-  /*width: 200px;*/
-  /*display: none;*/
+  margin-top: 2em;
+  display: none;
 }
 
 
-/* Skills Styles */
+/* Main Content Styles */
 
-#skills-h3 {
-  color: #f5ae23;
-  /*display: none;*/
+.work-description-col, .project-description-col, .school-degree-col, .course-school-col, .contact-entry-col {
+  margin-bottom: 2em;
 }
 
-
-/* TODO: Replace with image later */
-
-
-/*.flex-box {
-  display: -webkit-flex;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  padding: 10px;
+.title-text, .employer-text, .project-text, .course-text, .school-text {
+  font-size: 1.2em;
+  color: rgba(57, 94, 102, 1) !important;
+  line-height: 1.3em;
 }
 
-.flex-column {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  padding: 10px;
-}*/
+.date-text {
+  text-align: center;
+  font-style: italic;
+  font-size: 14px;
+  line-height: 16px;
+}
 
+.entry-icon {
+  color: rgba(57, 94, 102, 1);
+  background-color: rgba(218, 247, 220, 1);
+}
 
-/*.center-content {
-  padding: 2.5% 5%;
-}*/
+.project-pictures-col {
+  text-align: center;
+}
+
+.project-image {
+  margin: 0 1em 3em;
+}
+
+.major-text {
+  font-size: 1em;
+  font-style: italic;
+  color: rgba(57, 94, 102, 1) !important;
+  line-height: 1.2em;
+}
+
+.location-text {
+  font-style: italic;
+  font-size: 1em;
+  color: rgba(57, 94, 102, 1) !important;
+  line-height: 1.3em;
+}
 
 
 /* Map Styles */
@@ -205,13 +204,6 @@ span {
 }
 
 
-/* Footer Styles */
-
-#lets-connect {
-  text-align: center;
-}
-
-
 /* Responsive Styles */
 
 @media only screen and (max-width: 767px) {
@@ -224,17 +216,8 @@ span {
   .skills-entry, .work-entry, .project-entry, .education-entry, .course-entry, .contact-entry {
     text-align: center;
   }
-  .date-text {
-    /*float: left;*/
-  }
-  .location-text {
-    /*float: right;*/
-  }
-  .biopic {
-    /*width: 150px;*/
-  }
-  .welcome-message {
-    /*display: none;*/
+  .employer-text, .location-text {
+    display: block;
   }
   #mapDiv {
     height: 300px;
@@ -248,12 +231,6 @@ span {
   .entry-icon {
     text-align: center;
   }
-  #skills-h3, .biopic {
-    /*display: block;*/
-  }
-  .date-text {
-    float: left;
-  }
   .location-text {
     float: right;
   }
@@ -266,9 +243,6 @@ span {
 }
 
 @media only screen and (min-width: 992) {
-  .date-text {
-    float: left;
-  }
   .location-text {
     float: right;
   }
